Fix autoprefixer doesn’t prefix this overflow-scrolling css

--- a/assets/app.raw.css
+++ b/assets/app.raw.css
@@ -112,6 +112,7 @@ header:hover + #info {
   left: 0;
   right: 0;
   overflow: auto;
+  -webkit-overflow-scrolling: touch;
   overflow-scrolling: touch;
   white-space: nowrap;
   padding: 10px;
